src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import '~slick-carousel/slick/slick.css';
@import '~slick-carousel/slick/slick-theme.css';

body {
  margin: 0;
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  letter-spacing: 0.05em;
  transition: all 1s ease-in-out;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.hero {
  max-width: 80rem;
  height: 31.8rem;
  background: url('./assets/hero2.png');
  background-size: cover;
}

.circle {
  background: url('./assets/sticks.png');
  background-repeat: no-repeat;
  background-position: bottom right;
}

.slick-prev {
  left: 2px;
}
.slick-next {
  right: 2px;
}

.slick-prev,
.slick-next {
  width: 3rem;
  height: 100%;
  z-index: 30;
  opacity: 0.3;
}
.slick-prev::before,
.slick-next::before {
  font-size: 3rem;
  color: black;
}

.slick-slide img {
  border-radius: 20px;
}

.slick-dots li button::before {
  font-size: 20px;
}

.hero-service {
  max-width: 80rem;
  height: 31.8rem;
  background: url('./assets/serviceHero.png');
  background-size: cover;
}

@layer components {
  .btn-primary {
    @apply h-16 w-full rounded bg-[#232323] font-bold uppercase text-white hover:bg-slate-800 sm:w-96;
  }
  .form-input {
    @apply mb-6 h-16 w-full border-b border-black bg-[#ededed] p-4 focus:border-transparent focus:outline focus:outline-2 focus:outline-black sm:w-96;
  }
  .form-errors {
    @apply absolute top-16 text-xs text-red-600;
  }
}

